--- a/src/main/resources/static/css/mypage.css
+++ b/src/main/resources/static/css/mypage.css
@@ -194,3 +194,10 @@ label.member-fileUpload {
 	-webkit-backdrop-filter: blur(8px);
 	background: rgba( 255, 255, 255, 0.65 );
 }
+
+/******************
+  가입한 밴드 리스트 스타일 
+  ********************/
+  img.mypage_bandImg{
+ 
+  }
