--- a/src/main/resources/templates/thymeleaf/band/band.html
+++ b/src/main/resources/templates/thymeleaf/band/band.html
@@ -55,17 +55,17 @@
 				<!-- 밴드 추천 리스트 -->
                 <div class="row band_recomandBox gap-3 my-4 m-auto justify-content-between px-4">
                     <div class="col-12 col-md-5 p-0 band_recomand_item " th:each ="bandList:${randomBandList}">
-	                    <a  th:href="@{'myBand?bandUrl='+ ${bandList.getBand_code()}}" class="band_recomand_link d-flex">
+	                    <a  th:href="@{'myBand?bandUrl='+ ${bandList.getBand_code()}}" class="band_recomand_link d-flex text-truncate">
 	                        <div class="band_recomand_img">
 	                            <img th:src="@{'../img/uploadBandThumnail/'+ ${bandList.getBand_thumnail()}}" class=" join_band_item_img" alt="...">
 	                        </div>
 	                        <div class="band_recomand_text text-truncate">
-	                        	<div class="ms-2">
-		                            <span class="h5 d-block text-truncate" th:text="${bandList.getBand_name()}"></span>
-		                            <span th:text="${bandList.getBand_content()}" class="text-truncate"></span>
+	                        	<div class="ms-2 w-100 text-truncate">
+		                            <span class="h5  d-block " th:text="${bandList.getBand_name()}"></span>
+		                            <span th:text="${bandList.getBand_content()}" ></span>
 	                        	</div>
-	                            <div class="band_more_view px-2 text-center">
-	                                <span>'테마명'</span> 밴드 더보기 >
+	                            <div class="band_more_view  text-center bg-main">
+	                                <span>밴드로 가기 ></span>
 	                            </div>
 	                        </div>
 	                    </a>
