--- a/src/main/resources/static/css/band.css
+++ b/src/main/resources/static/css/band.css
@@ -5,6 +5,10 @@
 div.band_lnb{
     width: 100%;
 }
+ul.band_lnb_ul> li{
+	cursor : pointer;
+}
+
 div.band_lnb li.band_lnb_item {
     height: 100%;
     font-size: 30px;
@@ -111,7 +115,14 @@ div.band_recomand_wrapper{
     width: 100%;
     padding: 40px 0px;
     background-color: #f3f2f2;
+    margin-bottom: 100px;
 }
+div.band_recomandBox{
+	background-color: white;
+	padding: 50px 0px;
+	border-radius: 30px;
+}
+
 a.band_recomand_link{
 	display : block;
 	width: 100%;
@@ -129,6 +140,8 @@ div.band_recomand_item{
     padding-left : 0px;
     height: 100px;;
     display: flex;
+    border-radius: 20px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, .18), 2px 2px 10px rgba(0, 0, 0, .04);
     
 }
 /* 밴드 추천 창 - 이미지*/
@@ -149,11 +162,9 @@ div.band_recomand_img>img{
 div.band_recomand_text{
 	position : relative;
     width: 70%;
-    
-    text-overflow : ellipsis;
     overflow: hidden;
-    white-space: nowpre
-    
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 div.band_recomand_text>h3{
     font-size: 18px;
@@ -170,7 +181,6 @@ div.band_more_view{
     display: inline-block;
     padding : 2px 5px;
     border : 1px solid rgb(255, 255, 255);
-    background-color: white;
     border-radius: 20px;
     position : relative;
     bottom : 0px;
