--- a/src/main/resources/templates/thymeleaf/info/Event_write.html
+++ b/src/main/resources/templates/thymeleaf/info/Event_write.html
@@ -14,7 +14,7 @@
 					<h3 class="p-0 m-0 text-center mb-4">여행정보 글 작성</h3>
 					<div class="col-12 col-xl-12 m-auto text-center">
 						<img id="profileimage" src="../img/mypage/user_rabbit.jpg"
-							alt="userImg" class=" border" width="200" height="200" /> 
+							alt="userImg" class=" border" width="200" height="200"  onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" /> 
 						<div class="col-12">여행정보 글 이미지 미리보기</div>
 						<div class="form-floating mt-3">
 						<div class="col-12 text-start">이미지</div>
