--- a/src/main/resources/templates/thymeleaf/info/infoCourse.html
+++ b/src/main/resources/templates/thymeleaf/info/infoCourse.html
@@ -57,7 +57,7 @@
                         <div class="col-3 board-left text-center">
                            <img th:src="@{'../img/info/' + ${list.getCourse_img()}}"
                               class="img-fluid rounded-4" alt=""
-                              style="width: 80px; height: 80px;">
+                              style="width: 80px; height: 80px;"  onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
                         </div>
                         <div class="col">
                            <div class="row">
@@ -106,7 +106,7 @@
                
                   <img src="../img/aicc/img_robot1.png" alt=""
                         class="d-block ms-auto robot m-4 " >
->>>>>>> branch 'develope' of https://github.com/Carri-er/test.git
+
                         
                </div>
                
