--- a/src/main/resources/templates/thymeleaf/aicc/Course_viewDay3.html
+++ b/src/main/resources/templates/thymeleaf/aicc/Course_viewDay3.html
@@ -63,7 +63,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aicc.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span class="text-center mt-3" th:text="${aicc.get(0).getEvent_name()}"></span>
 							</a>
 						</div>
@@ -73,7 +73,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccFood.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccFood.get(0).getEvent_name()}"
 									class=" mt-3"></span>
 							</a>
@@ -83,7 +83,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aicc2.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aicc2.get(0).getEvent_name()}"
 									class="text-center mt-3 "></span>
 							</a>
@@ -94,7 +94,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccFood2.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccFood2.get(0).getEvent_name()}"
 									class="text-center mt-3 "></span>
 							</a>
@@ -105,7 +105,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccCafe.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccCafe.get(0).getEvent_name()}"
 									class="text-center"></span>
 							</a>
@@ -116,7 +116,7 @@
 								<img
 								th:src="@{'../img/info/' + ${hotel.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${hotel.get(0).getEvent_name()}"
 									class="text-center"></span>
 							</a>
@@ -134,7 +134,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aicc3.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span class="text-center mt-3" th:text="${aicc3.get(0).getEvent_name()}"></span>
 							</a>
 						</div>
@@ -144,7 +144,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccFood3.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccFood3.get(0).getEvent_name()}"
 									class=" mt-3"></span>
 							</a>
@@ -154,7 +154,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aicc4.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aicc4.get(0).getEvent_name()}"
 									class="text-center mt-3 "></span>
 							</a>
@@ -165,7 +165,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccFood4.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccFood4.get(0).getEvent_name()}"
 									class="text-center mt-3 "></span>
 							</a>
@@ -176,7 +176,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccCafe2.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccCafe2.get(0).getEvent_name()}"
 									class="text-center"></span>
 							</a>
@@ -187,7 +187,7 @@
 								<img
 								th:src="@{'../img/info/' + ${hotel2.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${hotel2.get(0).getEvent_name()}"
 									class="text-center"></span>
 							</a>
@@ -204,7 +204,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aicc5.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span class="text-center mt-3" th:text="${aicc5.get(0).getEvent_name()}"></span>
 							</a>
 						</div>
@@ -214,7 +214,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccFood5.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccFood5.get(0).getEvent_name()}"
 									class=" mt-3"></span>
 							</a>
@@ -224,7 +224,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aicc6.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aicc6.get(0).getEvent_name()}"
 									class="text-center mt-3 "></span>
 							</a>
@@ -235,7 +235,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccFood6.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccFood6.get(0).getEvent_name()}"
 									class="text-center mt-3 "></span>
 							</a>
@@ -246,7 +246,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccCafe3.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccCafe3.get(0).getEvent_name()}"
 									class="text-center"></span>
 							</a>
