--- a/src/main/resources/templates/thymeleaf/aicc/saveCourse.html
+++ b/src/main/resources/templates/thymeleaf/aicc/saveCourse.html
@@ -31,7 +31,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aicc.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span class="text-center mt-3" th:text="${aicc.get(0).getEvent_name()}"></span>
 							</a>
 						</div>
@@ -41,7 +41,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccFood.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccFood.get(0).getEvent_name()}"
 									class=" mt-3"></span>
 							</a>
@@ -51,7 +51,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aicc2.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aicc2.get(0).getEvent_name()}"
 									class="text-center mt-3 "></span>
 							</a>
@@ -62,7 +62,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccFood2.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccFood2.get(0).getEvent_name()}"
 									class="text-center mt-3 "></span>
 							</a>
@@ -73,7 +73,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccCafe.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccCafe.get(0).getEvent_name()}"
 									class="text-center"></span>
 							</a>
