--- a/src/main/resources/templates/thymeleaf/aicc/saveCourseday2.html
+++ b/src/main/resources/templates/thymeleaf/aicc/saveCourseday2.html
@@ -40,7 +40,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aicc.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span class="text-center mt-3" th:text="${aicc.get(0).getEvent_name()}"></span>
 							</a>
 						</div>
@@ -50,7 +50,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccFood.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccFood.get(0).getEvent_name()}"
 									class=" mt-3"></span>
 							</a>
@@ -60,7 +60,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aicc2.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aicc2.get(0).getEvent_name()}"
 									class="text-center mt-3 "></span>
 							</a>
@@ -71,7 +71,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccFood2.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccFood2.get(0).getEvent_name()}"
 									class="text-center mt-3 "></span>
 							</a>
@@ -82,7 +82,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccCafe.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccCafe.get(0).getEvent_name()}"
 									class="text-center"></span>
 							</a>
@@ -93,7 +93,7 @@
 								<img
 								th:src="@{'../img/info/' + ${hotel.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${hotel.get(0).getEvent_name()}"
 									class="text-center"></span>
 							</a>
@@ -109,7 +109,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aicc3.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span class="text-center mt-3" th:text="${aicc3.get(0).getEvent_name()}"></span>
 							</a>
 						</div>
@@ -119,7 +119,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccFood3.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccFood3.get(0).getEvent_name()}"
 									class=" mt-3"></span>
 							</a>
@@ -129,7 +129,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aicc4.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aicc4.get(0).getEvent_name()}"
 									class="text-center mt-3 "></span>
 							</a>
@@ -140,7 +140,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccFood4.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccFood4.get(0).getEvent_name()}"
 									class="text-center mt-3 "></span>
 							</a>
@@ -151,7 +151,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccCafe2.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccCafe2.get(0).getEvent_name()}"
 									class="text-center"></span>
 							</a>
