--- a/src/main/resources/templates/thymeleaf/aicc/saveCourseday3.html
+++ b/src/main/resources/templates/thymeleaf/aicc/saveCourseday3.html
@@ -48,7 +48,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aicc.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span class="text-center mt-3" th:text="${aicc.get(0).getEvent_name()}"></span>
 							</a>
 						</div>
@@ -58,7 +58,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccFood.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccFood.get(0).getEvent_name()}"
 									class=" mt-3"></span>
 							</a>
@@ -68,7 +68,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aicc2.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aicc2.get(0).getEvent_name()}"
 									class="text-center mt-3 "></span>
 							</a>
@@ -79,7 +79,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccFood2.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccFood2.get(0).getEvent_name()}"
 									class="text-center mt-3 "></span>
 							</a>
@@ -90,7 +90,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccCafe.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccCafe.get(0).getEvent_name()}"
 									class="text-center"></span>
 							</a>
@@ -101,7 +101,7 @@
 								<img
 								th:src="@{'../img/info/' + ${hotel.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${hotel.get(0).getEvent_name()}"
 									class="text-center"></span>
 							</a>
@@ -117,7 +117,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aicc3.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span class="text-center mt-3" th:text="${aicc3.get(0).getEvent_name()}"></span>
 							</a>
 						</div>
@@ -127,7 +127,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccFood3.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccFood3.get(0).getEvent_name()}"
 									class=" mt-3"></span>
 							</a>
@@ -137,7 +137,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aicc4.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aicc4.get(0).getEvent_name()}"
 									class="text-center mt-3 "></span>
 							</a>
@@ -148,7 +148,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccFood4.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccFood4.get(0).getEvent_name()}"
 									class="text-center mt-3 "></span>
 							</a>
@@ -159,7 +159,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccCafe2.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccCafe2.get(0).getEvent_name()}"
 									class="text-center"></span>
 							</a>
@@ -170,7 +170,7 @@
 								<img
 								th:src="@{'../img/info/' + ${hotel2.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${hotel2.get(0).getEvent_name()}"
 									class="text-center"></span>
 							</a>
@@ -186,7 +186,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aicc5.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span class="text-center mt-3" th:text="${aicc5.get(0).getEvent_name()}"></span>
 							</a>
 						</div>
@@ -196,7 +196,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccFood5.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccFood5.get(0).getEvent_name()}"
 									class=" mt-3"></span>
 							</a>
@@ -206,7 +206,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aicc6.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aicc6.get(0).getEvent_name()}"
 									class="text-center mt-3 "></span>
 							</a>
@@ -217,7 +217,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccFood6.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccFood6.get(0).getEvent_name()}"
 									class="text-center mt-3 "></span>
 							</a>
@@ -228,7 +228,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccCafe3.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;">
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccCafe3.get(0).getEvent_name()}"
 									class="text-center"></span>
 							</a>
