--- a/src/main/resources/templates/thymeleaf/info/info.html
+++ b/src/main/resources/templates/thymeleaf/info/info.html
@@ -40,7 +40,7 @@
 								<div class="col-3 board-left text-center hstack justify-content-center">
 									<img th:src="@{'../img/info/' + ${list.getEvent_thumbnail()}}"
 										class="img-fluid rounded-4" alt=""
-										style="width: 80px; height: 80px;">
+										style="width: 80px; height: 80px;"  onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								</div>
 								<div class="col">
 									<div class="row">
