--- a/src/main/resources/templates/thymeleaf/map/map.html
+++ b/src/main/resources/templates/thymeleaf/map/map.html
@@ -111,7 +111,7 @@
                         <div class="col-2 count mx-2 px-0">
                            <img th:src="@{'../img/info/' + ${aicc.getEvent_thumbnail()}}"
                               class="img-fluid rounded-circle" alt=""
-                              style="width: 60px; height: 60px;">
+                              style="width: 60px; height: 60px;"  onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
                         </div>
                         <div class="col-8">
                            <p th:text="${aicc.getEvent_category()}"
@@ -137,7 +137,7 @@
                         <div class="col-2 count mx-2 px-0">
                            <img th:src="@{'../img/info/' + ${aiccFood.getEvent_thumbnail()}}"
                               class="img-fluid rounded-circle" alt=""
-                              style="width: 60px; height: 60px;">
+                              style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
                         </div>
                         <div class="col-8">
                            <p th:text="${aiccFood.getEvent_category()}"
@@ -163,7 +163,7 @@
                         <div class="col-2 count mx-2 px-0">
                            <img th:src="@{'../img/info/' + ${aicc2.getEvent_thumbnail()}}"
                               class="img-fluid rounded-circle" alt=""
-                              style="width: 60px; height: 60px;">
+                              style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
                         </div>
                         <div class="col-8">
                            <p th:text="${aicc2.getEvent_category()}"
@@ -188,7 +188,7 @@
                         <div class="col-2 count mx-2 px-0">
                            <img th:src="@{'../img/info/' + ${aiccCafe.getEvent_thumbnail()}}"
                               class="img-fluid rounded-circle" alt=""
-                              style="width: 60px; height: 60px;">
+                              style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
                         </div>
                         <div class="col-8">
                            <p th:text="${aiccCafe.getEvent_category()}"
@@ -213,7 +213,7 @@
                         <div class="col-2 count mx-2 px-0">
                            <img th:src="@{'../img/info/' + ${aiccFood2.getEvent_thumbnail()}}"
                               class="img-fluid rounded-circle" alt=""
-                              style="width: 60px; height: 60px;">
+                              style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
                         </div>
                         <div class="col-8">
                            <p th:text="${aiccFood2.getEvent_category()}"
