--- a/src/main/resources/templates/thymeleaf/map/mapDay2.html
+++ b/src/main/resources/templates/thymeleaf/map/mapDay2.html
@@ -160,7 +160,7 @@
 											<img
 												th:src="@{'../img/info/' + ${aicc.getEvent_thumbnail()}}"
 												class="img-fluid rounded-circle" alt=""
-												style="width: 60px; height: 60px;">
+												style="width: 60px; height: 60px;"  onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 										</div>
 										<div class="col-8">
 											<p th:text="${aicc.getEvent_category()}"
@@ -189,7 +189,7 @@
 											<img
 												th:src="@{'../img/info/' + ${aiccFood.getEvent_thumbnail()}}"
 												class="img-fluid rounded-circle" alt=""
-												style="width: 60px; height: 60px;">
+												style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 										</div>
 										<div class="col-8">
 											<p th:text="${aiccFood.getEvent_category()}"
@@ -218,7 +218,7 @@
 											<img
 												th:src="@{'../img/info/' + ${aicc2.getEvent_thumbnail()}}"
 												class="img-fluid rounded-circle" alt=""
-												style="width: 60px; height: 60px;">
+												style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 										</div>
 										<div class="col-8">
 											<p th:text="${aicc2.getEvent_category()}"
@@ -246,7 +246,7 @@
 											<img
 												th:src="@{'../img/info/' + ${aiccCafe.getEvent_thumbnail()}}"
 												class="img-fluid rounded-circle" alt=""
-												style="width: 60px; height: 60px;">
+												style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 										</div>
 										<div class="col-8">
 											<p th:text="${aiccCafe.getEvent_category()}"
@@ -274,7 +274,7 @@
 											<img
 												th:src="@{'../img/info/' + ${aiccFood2.getEvent_thumbnail()}}"
 												class="img-fluid rounded-circle" alt=""
-												style="width: 60px; height: 60px;">
+												style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 										</div>
 										<div class="col-8">
 											<p th:text="${aiccFood2.getEvent_category()}"
@@ -303,7 +303,7 @@
 												<img
 													th:src="@{'../img/info/' + ${hotel.getEvent_thumbnail()}}"
 													class="img-fluid rounded-circle" alt=""
-													style="width: 60px; height: 60px;">
+													style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 											</div>
 											<div class="col-8">
 												<p th:text="${hotel.getEvent_category()}"
@@ -338,7 +338,7 @@
 											<img
 												th:src="@{'../img/info/' + ${aicc3.getEvent_thumbnail()}}"
 												class="img-fluid rounded-circle" alt=""
-												style="width: 60px; height: 60px;">
+												style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 										</div>
 										<div class="col-8">
 											<p th:text="${aicc3.getEvent_category()}"
@@ -367,7 +367,7 @@
 											<img
 												th:src="@{'../img/info/' + ${aiccFood3.getEvent_thumbnail()}}"
 												class="img-fluid rounded-circle" alt=""
-												style="width: 60px; height: 60px;">
+												style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 										</div>
 										<div class="col-8">
 											<p th:text="${aiccFood3.getEvent_category()}"
@@ -396,7 +396,7 @@
 											<img
 												th:src="@{'../img/info/' + ${aicc4.getEvent_thumbnail()}}"
 												class="img-fluid rounded-circle" alt=""
-												style="width: 60px; height: 60px;">
+												style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 										</div>
 										<div class="col-8">
 											<p th:text="${aicc4.getEvent_category()}"
@@ -424,7 +424,7 @@
 											<img
 												th:src="@{'../img/info/' + ${aiccCafe2.getEvent_thumbnail()}}"
 												class="img-fluid rounded-circle" alt=""
-												style="width: 60px; height: 60px;">
+												style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 										</div>
 										<div class="col-8">
 											<p th:text="${aiccCafe2.getEvent_category()}"
@@ -452,7 +452,7 @@
 											<img
 												th:src="@{'../img/info/' + ${aiccFood4.getEvent_thumbnail()}}"
 												class="img-fluid rounded-circle" alt=""
-												style="width: 60px; height: 60px;">
+												style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 										</div>
 										<div class="col-8">
 											<p th:text="${aiccFood4.getEvent_category()}"
