--- a/src/main/resources/templates/thymeleaf/map/mapDay3.html
+++ b/src/main/resources/templates/thymeleaf/map/mapDay3.html
@@ -169,7 +169,7 @@
 											<img
 												th:src="@{'../img/info/' + ${aicc.getEvent_thumbnail()}}"
 												class="img-fluid rounded-circle" alt=""
-												style="width: 60px; height: 60px;">
+												style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 										</div>
 										<div class="col-8">
 											<p th:text="${aicc.getEvent_category()}"
@@ -198,7 +198,7 @@
 											<img
 												th:src="@{'../img/info/' + ${aiccFood.getEvent_thumbnail()}}"
 												class="img-fluid rounded-circle" alt=""
-												style="width: 60px; height: 60px;">
+												style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 										</div>
 										<div class="col-8">
 											<p th:text="${aiccFood.getEvent_category()}"
@@ -227,7 +227,7 @@
 											<img
 												th:src="@{'../img/info/' + ${aicc2.getEvent_thumbnail()}}"
 												class="img-fluid rounded-circle" alt=""
-												style="width: 60px; height: 60px;">
+												style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 										</div>
 										<div class="col-8">
 											<p th:text="${aicc2.getEvent_category()}"
@@ -255,7 +255,7 @@
 											<img
 												th:src="@{'../img/info/' + ${aiccCafe.getEvent_thumbnail()}}"
 												class="img-fluid rounded-circle" alt=""
-												style="width: 60px; height: 60px;">
+												style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 										</div>
 										<div class="col-8">
 											<p th:text="${aiccCafe.getEvent_category()}"
@@ -283,7 +283,7 @@
 											<img
 												th:src="@{'../img/info/' + ${aiccFood2.getEvent_thumbnail()}}"
 												class="img-fluid rounded-circle" alt=""
-												style="width: 60px; height: 60px;">
+												style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 										</div>
 										<div class="col-8">
 											<p th:text="${aiccFood2.getEvent_category()}"
@@ -312,7 +312,7 @@
 												<img
 													th:src="@{'../img/info/' + ${hotel.getEvent_thumbnail()}}"
 													class="img-fluid rounded-circle" alt=""
-													style="width: 60px; height: 60px;">
+													style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 											</div>
 											<div class="col-8">
 												<p th:text="${hotel.getEvent_category()}"
@@ -347,7 +347,7 @@
 											<img
 												th:src="@{'../img/info/' + ${aicc3.getEvent_thumbnail()}}"
 												class="img-fluid rounded-circle" alt=""
-												style="width: 60px; height: 60px;">
+												style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 										</div>
 										<div class="col-8">
 											<p th:text="${aicc3.getEvent_category()}"
@@ -376,7 +376,7 @@
 											<img
 												th:src="@{'../img/info/' + ${aiccFood3.getEvent_thumbnail()}}"
 												class="img-fluid rounded-circle" alt=""
-												style="width: 60px; height: 60px;">
+												style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 										</div>
 										<div class="col-8">
 											<p th:text="${aiccFood3.getEvent_category()}"
@@ -405,7 +405,7 @@
 											<img
 												th:src="@{'../img/info/' + ${aicc4.getEvent_thumbnail()}}"
 												class="img-fluid rounded-circle" alt=""
-												style="width: 60px; height: 60px;">
+												style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 										</div>
 										<div class="col-8">
 											<p th:text="${aicc4.getEvent_category()}"
@@ -433,7 +433,7 @@
 											<img
 												th:src="@{'../img/info/' + ${aiccCafe2.getEvent_thumbnail()}}"
 												class="img-fluid rounded-circle" alt=""
-												style="width: 60px; height: 60px;">
+												style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 										</div>
 										<div class="col-8">
 											<p th:text="${aiccCafe2.getEvent_category()}"
@@ -461,7 +461,7 @@
 											<img
 												th:src="@{'../img/info/' + ${aiccFood4.getEvent_thumbnail()}}"
 												class="img-fluid rounded-circle" alt=""
-												style="width: 60px; height: 60px;">
+												style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 										</div>
 										<div class="col-8">
 											<p th:text="${aiccFood4.getEvent_category()}"
@@ -489,7 +489,7 @@
 											<img
 												th:src="@{'../img/info/' + ${hotel2.getEvent_thumbnail()}}"
 												class="img-fluid rounded-circle" alt=""
-												style="width: 60px; height: 60px;">
+												style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 										</div>
 										<div class="col-8">
 											<p th:text="${hotel2.getEvent_category()}"
@@ -523,7 +523,7 @@
 											<img
 												th:src="@{'../img/info/' + ${aicc5.getEvent_thumbnail()}}"
 												class="img-fluid rounded-circle" alt=""
-												style="width: 60px; height: 60px;">
+												style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 										</div>
 										<div class="col-8">
 											<p th:text="${aicc5.getEvent_category()}"
@@ -552,7 +552,7 @@
 											<img
 												th:src="@{'../img/info/' + ${aiccFood5.getEvent_thumbnail()}}"
 												class="img-fluid rounded-circle" alt=""
-												style="width: 60px; height: 60px;">
+												style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 										</div>
 										<div class="col-8">
 											<p th:text="${aiccFood5.getEvent_category()}"
@@ -581,7 +581,7 @@
 											<img
 												th:src="@{'../img/info/' + ${aicc6.getEvent_thumbnail()}}"
 												class="img-fluid rounded-circle" alt=""
-												style="width: 60px; height: 60px;">
+												style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 										</div>
 										<div class="col-8">
 											<p th:text="${aicc6.getEvent_category()}"
@@ -609,7 +609,7 @@
 											<img
 												th:src="@{'../img/info/' + ${aiccCafe3.getEvent_thumbnail()}}"
 												class="img-fluid rounded-circle" alt=""
-												style="width: 60px; height: 60px;">
+												style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 										</div>
 										<div class="col-8">
 											<p th:text="${aiccCafe3.getEvent_category()}"
@@ -637,7 +637,7 @@
 											<img
 												th:src="@{'../img/info/' + ${aiccFood6.getEvent_thumbnail()}}"
 												class="img-fluid rounded-circle" alt=""
-												style="width: 60px; height: 60px;">
+												style="width: 60px; height: 60px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 										</div>
 										<div class="col-8">
 											<p th:text="${aiccFood6.getEvent_category()}"
