--- a/src/main/resources/templates/thymeleaf/aicc/Course_view.html
+++ b/src/main/resources/templates/thymeleaf/aicc/Course_view.html
@@ -45,7 +45,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aicc.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';"  onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
+								style="width: 100px; height: 100px;"  onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span class="text-center mt-3" th:text="${aicc.get(0).getEvent_name()}"></span>
 							</a>
 						</div>
@@ -55,7 +55,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccFood.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';"  onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccFood.get(0).getEvent_name()}"
 									class=" mt-3"></span>
 							</a>
@@ -65,7 +65,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aicc2.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';"  onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aicc2.get(0).getEvent_name()}"
 									class="text-center mt-3 "></span>
 							</a>
@@ -76,7 +76,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccFood2.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';"  onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
+								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccFood2.get(0).getEvent_name()}"
 									class="text-center mt-3 "></span>
 							</a>
@@ -87,7 +87,7 @@
 								<img
 								th:src="@{'../img/info/' + ${aiccCafe.get(0).getEvent_thumbnail()}}"
 								alt="" class="img-fluid mx-auto rounded-4 d-block my-3"
-								style="width: 100px; height: 100px;" onerror="this.onerror=null; this.src='../img/info/img_noimg.png';"  onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
+								style="width: 100px; height: 100px;"  onerror="this.onerror=null; this.src='../img/info/img_noimg.png';" >
 								<span th:text="${aiccCafe.get(0).getEvent_name()}"
 									class="text-center"></span>
 							</a>
