--- a/src/main/resources/templates/thymeleaf/Member/mypage.html
+++ b/src/main/resources/templates/thymeleaf/Member/mypage.html
@@ -86,12 +86,14 @@
                                 <!-- Swiper -->
                                 <div class="swiper mySwiper">
                                     <div class="swiper-wrapper">
-                                       	<div class="swiper-slide" th:each="mypage_joinBandList : ${joinBandList}">
-                                            <div class="card border-0 my-history-content-card text-center">
-                                               <img th:src="@{'../img/uploadBandThumnail/'+${mypage_joinBandList.getBand_thumnail()}}" class="mb-3 mypage_bandImg" alt="">
-                                                <span class="text-tourist" th:text="${mypage_joinBandList.getBand_name()}">밴드 명</span>
-                                            </div>
-                                       	</div>
+                                          <div class="swiper-slide" th:each="mypage_joinBandList : ${joinBandList}">
+                                             <a th:href="@{'/myBand?bandUrl='+${mypage_joinBandList.getBand_code()}}">
+                                               <div class="card border-0 my-history-content-card text-center" >
+                                                  <img th:src="@{'../img/uploadBandThumnail/'+${mypage_joinBandList.getBand_thumnail()}}" class="mb-3 mypage_bandImg" alt="">
+                                                   <span class="text-tourist" th:text="${mypage_joinBandList.getBand_name()}">밴드 명</span>
+                                               </div>
+                                            </a>
+                                          </div>
                                     </div>
                                     <div class="row mx-auto">
                                         <div class="swiper-scrollbar">
